--- a/styles.css
+++ b/styles.css
@@ -468,3 +468,41 @@ footer {
       font-size: 1.1rem;
       line-height: 1.6;
     }
+
+
+/* Game Page */
+    .game {
+  height: 100vh;
+  width: 100%;
+  background-image: url('https://firebasestorage.googleapis.com/v0/b/anna-1996.appspot.com/o/images_horses%2FGAme_horse1.png?alt=media&token=e9326b54-a0a5-412c-8513-e207fee61bb4');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.game h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.game p {
+  font-size: 1.25rem;
+  max-width: 700px;
+  margin-bottom: 1rem;
+}
+
+.game a.btn {
+  padding: 0.6rem 1.2rem;
+  background: #000;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: bold;
+}
